Fix alignment of nav elements

--- a/app/assets/stylesheets/homepage.css
+++ b/app/assets/stylesheets/homepage.css
@@ -1,36 +1,24 @@
-.logo {
-  font-family: 'Oswald', sans-serif;
-  font-size: 30px;
-  color: black;
-}
-
 .header-nav {
   background-color: white;
   margin: auto;
 }
 
-.nav-links {
-  text-align: center;
-  font-family: 'Oswald', sans-serif;
-  padding: 10px;
+.header-nav ul {
+  display: flex;
+  justify-content: space-between;
 }
 
-.category-links, .session-form-link {
-  vertical-align: middle;
+.nav-links, .session-form-link {
+  font-family: 'Oswald', sans-serif;
   text-decoration: none;
-  padding: 10px;
   color: black;
   text-transform: uppercase;
-  font-size: 15px;
-  font-weight: bold;
+  font-size: 20px;
   cursor: pointer;
 }
 
-.category-links:visited {
-  color: black;
-}
-
-.homepage-container {
+.nav-links:visited {
+  color: #000;
 }
 
 .card-container {
@@ -42,8 +30,4 @@
   background-color: rgb(0, 0, 0);
   text-align: left;
   padding-left: 2%;
-}
-
-.shop-men-card {
-  display: inline;
 }
